# CJson

./: CHANGELOG.md  CJson.c  CJson.h  CMakeLists.txt  LICENSE  README.md  test.c
.claude/: CLAUDE.md
.github/workflows/: ci.yml  release.yml
cmake/: CJsonConfig.cmake.in  cjson.pc.in
docs/: API_REFERENCE.md  IMPLEMENTATION_DESIGN.md
tests/: test_basic.c  test_edge_cases.c  test_memory.c  test_stringify.c
